[tool.poetry]
name = "bitcoind_exporter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jsonrpc-async = "^2.1.1"
envvarconf = "^1.4.2"
sentry-sdk = "^1.6.0"
aioprometheus = {extras = ["aiohttp"], version = "^22.5.0"}
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
