[tool.poetry]
name = "bitcoind_exporter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
jsonrpc-async = "==2.1.2"
envvarconf = "==1.4.2"
sentry-sdk = "==2.3.1"
aioprometheus = { extras = ["aiohttp"], version = "==23.12.0" }
pydantic = "==2.7.1"

[tool.poetry.dev-dependencies]
mypy = "==1.10.0"
flake8 = "==7.0.0"
pytest = "==8.2.1"
pytest-asyncio = "==0.23.7"
pytest-cov = "==5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
